--- a/.env.dist
+++ b/.env.dist
@@ -15,3 +15,9 @@ APP_SECRET=46761fd73d30dee32262f3f67a9ead6e
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=63b444ede8af20045217e8c42415c165
+###< lexik/jwt-authentication-bundle ###
