--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "guzzlehttp/guzzle": "^6.3",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
         "lexik/jwt-authentication-bundle": "^2.6",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
