--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -11,19 +11,9 @@ login_check:
     path: /login_check
     methods: [POST]
 
-address:
-    path: /address
-    controller: App\Controller\AddressController::Address
-    methods: [GET]
-
-city:
-    path: /city
-    controller: App\Controller\CityController::City
-    methods: [GET]
-
-cinema_theater:
-    path: /cinema_theater
-    controller: App\Controller\Cinema_TheaterController::Cinema_Theater
+theater:
+    path: /theater
+    controller: App\Controller\TheaterController::newTheater
     methods: [GET]
 
 
